--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -160,7 +160,14 @@ p a:hover {
     height: 90px;
 }
 
-
+h3.ticker {
+    background: none repeat scroll 0 0 #EDEDED;
+    border: 1px solid #CCCCCC;
+    font-size: 1.2em;
+    margin: 10px 0;
+    padding: 10px;
+    text-align: center;
+}
 
 
 /*--------------------------------------media queries-------------------------*/
@@ -220,6 +227,7 @@ p a:hover {
     }
     
 }
+
 
 @media only screen and (max-width: 380px) {
     .mobile-logo, .mobile-logo img {
