--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -72,14 +72,14 @@ body {
 }
 .main-navbar .navbar li a:hover  {
     border-bottom: solid 1px;
-    color: #808080;
+    color: #6db3f2;
 }
 .main-navbar .navbar li a#logo0:hover {
     border-bottom: none;
 }
 .main-navbar .navbar li a.subCurrent {
     border-bottom: solid 1px;
-    color: #808080;
+    color: #6db3f2;
 }
 p a { 
     text-decoration: none; 
@@ -164,9 +164,17 @@ h3.ticker {
     background: none repeat scroll 0 0 #EDEDED;
     border: 1px solid #CCCCCC;
     font-size: 1.2em;
+    font-weight: 900;
+    color: #1E1E50;
     margin: 10px 0;
     padding: 10px;
     text-align: center;
+}
+h3.ticker a img {
+    margin: auto 10px;
+    vertical-align: sub;
+    box-shadow: 1px 1px 1px;
+    border-radius: 5px;
 }
 
 
