--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -79,7 +79,7 @@ body {
 }
 .main-navbar .navbar li a.subCurrent {
     border-bottom: solid 1px;
-    color: #6db3f2;
+    color: #717191;
 }
 p a { 
     text-decoration: none; 
@@ -165,7 +165,7 @@ h3.ticker {
     border: 1px solid #CCCCCC;
     font-size: 1.2em;
     font-weight: 900;
-    color: #1E1E50;
+    color: #717191;
     margin: 10px 0;
     padding: 10px;
     text-align: center;
