--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -72,7 +72,7 @@ body {
 }
 .main-navbar .navbar li a:hover  {
     border-bottom: solid 1px;
-    color: #6db3f2;
+    color: #717191;
 }
 .main-navbar .navbar li a#logo0:hover {
     border-bottom: none;
