--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -165,7 +165,7 @@ h3.ticker {
     border: 1px solid #CCCCCC;
     font-size: 1.2em;
     font-weight: 900;
-    color: #717191;
+    color: #1E1E50;
     margin: 10px 0;
     padding: 10px;
     text-align: center;
