--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,12 @@
 <section class="">
     <section class="banner" id="content0">
         <img src="images/banner.jpg" class="entire-width"/>
-        <h3 class="ticker">$12,500 raised so far. $17,500 remaining to  our goal. <a href="#"><img src="images/paypal-small.png" alt="Donate with PayPal"> </a></h3>
+        <h3 class="ticker">$12,500 raised so far. $17,500 remaining to  our goal. <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="96KLQ8NEE97MQ">
+            <input type="image" src="http://nantucketedtrust.github.io/images/paypal-small.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+        </form>
+        </h3>
     </section>
 </section>
