Modal window showing up correctly. Close button need to be add

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,12 +1,30 @@
 <section class="">
     <section class="banner" id="content0">
         <img src="images/banner.jpg" class="entire-width"/>
-        <h3 class="ticker">$12,500 raised so far. $17,500 remaining to  our goal. <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="96KLQ8NEE97MQ">
-            <input type="image" src="http://nantucketedtrust.github.io/images/paypal-small.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
+        <h3 class="ticker buttonHolder">$12,500 raised so far. $17,500 remaining to  our goal.
+            <a href="#" class="frontButton" title="paypal donation"><img src="images/paypal-small.png" /></a>
+            <section class="modal-window">
+                <section class="PayPal-wrapper">
+                    <h4 id="donateAll" class="donations"><span>Donate the Whole organization</span>
+                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                            <input type="hidden" name="cmd" value="_s-xclick">
+                            <input type="hidden" name="hosted_button_id" value="9P6C48KKNM9XJ">
+                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+
+                    </h4>
+                    <h4 id="donateFLD" class="donations"><span>Donate the French Language Department</span>
+                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                            <input type="hidden" name="cmd" value="_s-xclick">
+                            <input type="hidden" name="hosted_button_id" value="8J9HG6BVJ252N">
+                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+
+                    </h4>
+                </section>
+            </section>
         </h3>
     </section>
 </section>
