--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -6,7 +6,9 @@
             <section class="modal-window">
                 <section class="PayPal-wrapper">
                     <span class="closeBtn"></span>
-                    <h4 id="donateAll" class="donations"><span>Donate the Whole organization</span>
+                    <div id="donateAll" class="donations">
+                        <h4>Make my donation available to:</h4>
+                        <span>The Nantucket Education Trust</span>
                         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                             <input type="hidden" name="cmd" value="_s-xclick">
                             <input type="hidden" name="hosted_button_id" value="9P6C48KKNM9XJ">
@@ -14,17 +16,20 @@
                             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                         </form>
 
-                    </h4>
-                    <h4 id="donateFLD" class="donations"><span>Donate the French Language Department</span>
+                    </div>
+                    <div id="donateOther" class="donations">
+                        <h4>Or to one of the following programs:</h4>
+                        <span>French Language Learning Center</span>
                         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                             <input type="hidden" name="cmd" value="_s-xclick">
                             <input type="hidden" name="hosted_button_id" value="8J9HG6BVJ252N">
                             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                         </form>
-
-                    </h4>
-                    
+                    </div>
+                    <div id="comingSoon" class="donations">
+                        <h4>(More programs are coming soon!)</h4>
+                    </div>
                 </section>
             </section>
         </h3>
