minor markup changes

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,13 @@
 <section class="">
     <section class="banner" id="content0">
         <img src="images/banner.jpg" class="entire-width"/>
-        <h3 class="ticker buttonHolder">$12,500 raised so far. $17,500 remaining to  our goal.
+        <h3 class="ticker buttonHolder">
+        
+            
+            $12,500 raised so far. $17,500 remaining to  our goal.
+            
+            
+            
             <a href="#" class="frontButton" title="paypal donation"><img src="images/paypal-small.png" /></a>
             <section class="modal-window">
                 <section class="PayPal-wrapper">
