--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -250,7 +250,7 @@ p.thank-you {
     background-color: rgba(255, 255, 255, 0.9);
     color: #000000;
     margin: 35px auto;
-    text-align: left;
+    text-align: center;
     width: 50%;
 }
 div.donations {
@@ -266,7 +266,6 @@ div.donations {
 }
 .donations > span {
     display: inline-block;
-    width: 70%;
     font-weight: normal;
     font-size: .9em;
 }
