--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -256,6 +256,7 @@ p.thank-you {
 div.donations {
     line-height: 1em;
     padding: 15px;
+    text-align: left;
 }
 .donations > h4 {
     display: block;
@@ -267,6 +268,7 @@ div.donations {
     display: inline-block;
     font-weight: normal;
     font-size: .9em;
+    width: 80%;
 }
 .donations > form {
     display: inline-block;
