--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -147,13 +147,15 @@ p a:hover {
 
 }
 #content0 .entire-width {
-    min-width: 60%;
+    min-width: auto;
+    max-width: 60%;
 
 }
 #content0 {
 
     background: #d9d9ee;
     padding-top: 10px;
+    text-align: center;
 }
 .mobile-logo {
     display: none;
