--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -138,6 +138,9 @@ p a:hover {
     border-bottom: 3px solid #ccc;
     color: #1e1e50;
 }
+h2 .no-bg {
+	    background-color: transparent;
+}
 .main-content .no-bg, div#form-wrapper .no-bg {
 
     background-color: #fff;
