css - bold/italic

--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -304,6 +304,12 @@ div.donations {
     cursor: pointer;
 }
 
+strong, b {
+	font-weight: bold;
+}
+em, i {
+	font-style: italic; 
+}
 
 /* ===================================================== */
 
