--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -36,6 +36,9 @@ body {
     /*font-family: JosefinSlab-Regular, 'Times New Roman',Georgia, serif;*/
   	font-family: Helvetica, Arial, sans-serif;
 }
+h1,h2,h3,h4,h5,h6 {
+	font-weight: bold;
+}
 .main-header {
     width: 100%;
     height: 130px;
