--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -39,6 +39,13 @@ body {
 h1,h2,h3,h4,h5,h6 {
 	font-weight: bold;
 }
+h3 {
+	font-size: 1.3em !important;
+	margin-bottom: 15px !important;
+}
+h4 {
+	font-size: 1.2em !important;
+}
 .main-header {
     width: 100%;
     height: 130px;
