--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -44,7 +44,8 @@ h3 {
 	margin-bottom: 15px !important;
 }
 h4 {
-	font-size: 1.2em !important;
+font-size: 1.2em !important;
+margin-bottom: 15px !important;
 }
 .main-header {
     width: 100%;
