--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -45,7 +45,7 @@ h3 {
 }
 h4 {
 font-size: 1.2em !important;
-margin-bottom: 15px !important;
+margin: 15px 0 !important;
 }
 .main-header {
     width: 100%;
