--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -96,6 +96,9 @@ margin: 15px 0 !important;
     border-bottom: solid 1px;
     color: #fff;
 }
+a#logo0.subCurrent {
+    border-bottom: none;
+}
 p a {
     text-decoration: none;
     color: #1e1e50;
