--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
 </section>
 
 <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/jquery.flexslider.min.js"></script>
 <script src="js/custom.js"></script>
 </body>
 </html>
