--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
     <title>{{ site.name }}</title>
     <meta name="description" content="{{ site.description }}">
     <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1.0, maximum-scale=3.0"/>
-    <meta name="apple-mobile-web-app-capable" content="yes">?
+    <meta name="apple-mobile-web-app-capable" content="yes">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/flexslider.min.css" rel="stylesheet" />
     <link href="stylesheets/main_style.css" rel="stylesheet" />
     <style>
         /*override defaults */
@@ -64,70 +65,9 @@
             </a>
         </nav>
     </header>
-  
-  
-   <!-- banner -->
-
-    <section class="banner" id="content0">
-        <img src="images/banner.jpg" class="entire-width"/>
-        <h3 class="ticker buttonHolder">
-
-
-            $12,500 raised so far. $17,500 remaining to  our goal.
-
-
-
-            <a href="#" class="frontButton" title="paypal donation"><img src="images/paypal-small.png" /></a>
-            <section class="modal-window">
-                <section class="PayPal-wrapper">
-                    <span class="closeBtn"></span>
-                    <div id="donateAll" class="donations">
-                        <h4>Make my donation available to:</h4>
-                        <span>NET General Donations</span>
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                            <input type="hidden" name="cmd" value="_s-xclick">
-                            <input type="hidden" name="hosted_button_id" value="Z36F7RFRPKN9G">
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                        </form>
-                    </div>
-                    <div id="donateNHS" class="donations">
-                        <span>NHS French Club</span>
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                            <input type="hidden" name="cmd" value="_s-xclick">
-                            <input type="hidden" name="hosted_button_id" value="DZAY683D6ANWL">
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                        </form>
-                    </div>
-                    <div id="donateNES" class="donations">
-                        <span>NES Playground</span>
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                            <input type="hidden" name="cmd" value="_s-xclick">
-                            <input type="hidden" name="hosted_button_id" value="TQFLENX2L6AAY">
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                        </form>
-                    </div>
-                    <div id="donateSPP" class="donations">
-                        <span>NET Student Programs and Projects</span>
-                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                            <input type="hidden" name="cmd" value="_s-xclick">
-                            <input type="hidden" name="hosted_button_id" value="X6AL9YK7BEBKU">
-                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                        </form>
-                    </div>
-                </section>
-            </section>
-        </h3>
-    </section>
-
-
-
     <section class="main-content">
 
-
+		
      
       
       
