Adding Arrow Navigation to the Image Slider

--- a/stylesheets/main_style.css
+++ b/stylesheets/main_style.css
@@ -234,6 +234,22 @@ h2 .no-bg {
 .flex-control-paging li a.flex-active {
   background: rgba(255,255,255,.9);
 }
+.flex-direction-nav a {
+  width: 40px;
+  height: 15px;
+  margin: 0;
+  top: 96%;
+  z-index: 100;
+  color: rgba(255,255,255,.9);
+  text-shadow: none;transition: all .3s ease-in-out;
+}
+.flex-direction-nav a:before {
+  font-size: 15px;
+  display: block;
+  content: '\f001';
+  color: rgba(255,255,255,1);
+  text-shadow: none;
+}
 .mobile-logo {
     display: none;
     width: 90px;
